# bergshamra

./: CHANGELOG.md  Cargo.toml  README.md  justfile
crates/bergshamra/: Cargo.toml
crates/bergshamra-c14n/: Cargo.toml
crates/bergshamra-c14n/src/: escape.rs  exclusive.rs  inclusive.rs  inclusive11.rs  lib.rs  render.rs
crates/bergshamra-core/: Cargo.toml
crates/bergshamra-core/src/: algorithm.rs  error.rs  lib.rs  ns.rs
crates/bergshamra-crypto/: Cargo.toml
crates/bergshamra-crypto/src/: cipher.rs  digest.rs  kdf.rs  keyagreement.rs  keytransport.rs  keywrap.rs  lib.rs  registry.rs  sign.rs
crates/bergshamra-dsig/: Cargo.toml
crates/bergshamra-dsig/src/: context.rs  lib.rs  sign.rs  verify.rs
crates/bergshamra-enc/: Cargo.toml
crates/bergshamra-enc/src/: context.rs  decrypt.rs  decrypt.rs.bak  encrypt.rs  lib.rs
crates/bergshamra-keys/: Cargo.toml
crates/bergshamra-keys/src/: key.rs  keyinfo.rs  keysxml.rs  lib.rs  loader.rs  manager.rs  x509.rs
crates/bergshamra-pkcs12/: Cargo.toml
crates/bergshamra-pkcs12/src/: kdf.rs  lib.rs  parse.rs
crates/bergshamra-transforms/: Cargo.toml
crates/bergshamra-transforms/src/: base64_transform.rs  enveloped.rs  lib.rs  pipeline.rs  uri.rs
crates/bergshamra-xml/: Cargo.toml
crates/bergshamra-xml/src/: document.rs  lib.rs  nodeset.rs  writer.rs  xpath.rs
crates/bergshamra/examples/: debug_digest.rs
crates/bergshamra/src/: lib.rs  main.rs
crates/roxmltree/: Cargo.toml
crates/roxmltree/src/: lib.rs
docs/adr/: 0001-dh-es-key-agreement-security.md  0002-cid-uri-scheme-skip.md
specs/: xml-c14n.html  xml-dsig.html  xmldsig-filter2.html  xmlenc-core1.html  xpath-31.html
test-data/signedxml/: README.md
tests/: merlin-xmldsig-twenty-three  xmlsec1-shim.py
