[package]
name = "bergshamra-keys"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Key management for Bergshamra XML Security library"

[dependencies]
bergshamra-core.workspace = true
bergshamra-crypto.workspace = true
rsa.workspace = true
ecdsa.workspace = true
dsa.workspace = true
p256 = { workspace = true, features = ["ecdsa"] }
p384 = { workspace = true, features = ["ecdsa"] }
p521 = { workspace = true, features = ["ecdsa"] }
pkcs1.workspace = true
pkcs5.workspace = true
pkcs8.workspace = true
spki.workspace = true
der.workspace = true
pem-rfc7468.workspace = true
x509-cert.workspace = true
bergshamra-pkcs12.workspace = true
base64.workspace = true
signature.workspace = true
roxmltree.workspace = true
