[package]
name = "bergshamra-xml"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "XML DOM abstraction for Bergshamra XML Security library"

[dependencies]
bergshamra-core.workspace = true
uppsala.workspace = true
