[package]
name = "roxmltree"
version = "0.20.0"
authors = ["Yevhenii Reizner <razrfalcon@gmail.com>"]
keywords = ["xml", "parser", "tree", "dom"]
categories = ["parser-implementations"]
license = "MIT OR Apache-2.0"
description = "Represent an XML as a read-only tree. (Vendored with prefix API additions)"
edition = "2021"
rust-version = "1.60"

[features]
default = ["std", "positions"]
std = []
positions = []
